<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="200dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/displayInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Display Input" />

        <TextView
            android:id="@+id/tvShowInput"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="" />

    </LinearLayout>

</LinearLayout>