<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zhangchf.mytestapp.MainActivity"
    tools:showIn="@layout/activity_main">

    
    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:alpha="1"/>

    <ImageView
        android:id="@+id/img_flip_animation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textureView"
        android:scaleType="fitXY"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ios__launchimage"/>

    <ImageView
        android:id="@+id/img_flip_3d_animation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textureView"
        android:layout_toRightOf="@id/img_flip_animation"
        android:scaleType="fitXY"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ios__launchimage"/>

    <com.example.zhangchf.mytestapp.FlipCalendarView
        android:id="@+id/flipCalendarView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clipChildren="false"
        android:layout_below="@id/img_flip_animation"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Do Test"
            android:onClick="onDoTest"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kotlin Activity"
            android:onClick="onOpenKotlinActivity"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weex Activity"
            android:onClick="onOpenWeexActivity"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Android Activity"
            android:onClick="onOpenAndroidActivity"/>

        <Button
            android:id="@+id/uiTestActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="UI Test Activity"/>
    </LinearLayout>

</RelativeLayout>
